# crewai_assesment_1

./: README.md
mareting_dept/: .env.example  README.md  campaign_idea.md  email_content.md  email_response.md  emails.md  final_draft.md  image_prompts.md  instagram_content.md  marketing_strategy.md  pyproject.toml  requirements.txt
mareting_dept/src/mareting_dept/: crew.py  main.py
mareting_dept/src/mareting_dept/config/: agents.yaml  tasks.yaml
mareting_dept/src/mareting_dept/tools/: search.py
